# defiant

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
Notebooks/: MDC1_FS_CURN_samples.core  new_tests.ipynb  testing.ipynb  verification_notebook.ipynb
OSplusplus/: __init__.py  core.py  os_Exceptions.py  ospp.py  ospp_exceptions.py  pair_covariance.py  pair_covariance_functions.py  utils.py
defiant/: __init__.py  caching_code.py  core.py  custom_exceptions.py  null_distribution.py  orf_functions.py  pair_covariance.py  plotting.py  utils.py
defiant/extra/: fun.py  mdc1_psrs.pkl  mdc1_utils.py
notebooks/: DIY_anisotropy.ipynb  MCOS_with_PC.ipynb  fixing_numerical_instability.ipynb  many_examples.ipynb  null_distributions.ipynb  testing_marginalizedTM.ipynb  verification_notebook.ipynb
unit_tests/: MDC1_FG_CURN_samples.core  unit_test_dev.ipynb
